fixed some spacing issues.

--- a/css/index.css
+++ b/css/index.css
@@ -135,6 +135,7 @@ table {
 }
 .jumbo {
   max-width: 1024px;
+  width: 100%;
   height: 598px;
   background-image: url('../img/home/home-jumbotron.png');
   margin: auto;
@@ -142,6 +143,7 @@ table {
 }
 .jumbo .heading {
   max-width: 855px;
+  width: 100%;
   height: 598px;
   margin: auto;
   display: flex;
@@ -175,6 +177,7 @@ table {
 }
 .main-content {
   max-width: 855px;
+  width: 100%;
   margin: 5rem auto 0;
 }
 .main-content .top-content .content {
@@ -215,6 +218,9 @@ table {
   margin: 5rem 0 8.5rem;
   position: relative;
 }
+.main-content .middle-content .image-block img {
+  width: 100%;
+}
 .main-content .middle-content .image-block .img-text {
   position: absolute;
   right: 0;
@@ -240,6 +246,7 @@ table {
 }
 footer {
   max-width: 1024px;
+  width: 100%;
   margin: 0 auto;
   padding: 5rem 0 .5rem;
   color: #FFFFFF;
