--- a/less/homepage.less
+++ b/less/homepage.less
@@ -1,5 +1,6 @@
 .jumbo{
     max-width: 1024px;
+    width: 100%;
     height: 598px;
     background-image: url('../img/home/home-jumbotron.png');
     margin: auto;
@@ -7,6 +8,7 @@
 
     .heading {
         max-width: 855px;
+        width: 100%;
         height: 598px;
         margin: auto;
         display: flex;
@@ -46,6 +48,7 @@
 
 .main-content {
     max-width: 855px;
+    width: 100%;
     margin: 5rem auto 0;
 
     .top-content {
@@ -96,6 +99,10 @@
             margin: 5rem 0 8.5rem;
             position: relative;
 
+            img{
+                width: 100%;
+            }
+
             .img-text{
                 position: absolute;
                 right: 0;
@@ -130,6 +137,7 @@
 
 footer {
     max-width: 1024px;
+    width: 100%;
     margin: 0 auto;
     padding: 5rem 0 .5rem;
     color: #FFFFFF;
